<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:text="@string/resgiter_book_about_book_txt_title"
        android:textColor="@color/base_white"
        android:textSize="@dimen/h4"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ipt_pages"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ipt_synopsis"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_book_pages"
            style="@style/Widget.MaterialComponents.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/resgiter_book_about_book_edit_pages" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ipt_synopsis"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/spn_genre"
        app:layout_constraintTop_toBottomOf="@id/ipt_pages"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_synopsis"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="start|top"
            android:hint="@string/resgiter_book_about_book_edit_synopsis"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spn_genre"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintLeft_toLeftOf="@id/ipt_synopsis"
        app:layout_constraintTop_toBottomOf="@id/ipt_synopsis"
        tools:listitem="@android:layout/simple_list_item_1" />

    <br.com.kyberbooks.components.KyberButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_back"
        app:layout_constraintRight_toRightOf="parent" />

    <br.com.kyberbooks.components.KyberButton
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/btn_back"
        app:buttonType="outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>